[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/button1.png" type="Texture" id=1]
[ext_resource path="res://assets/button3.png" type="Texture" id=2]
[ext_resource path="res://assets/button4.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/button2.png" type="Texture" id=5]
[ext_resource path="res://fonts/OpenSans-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/Main.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 6 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -141.0
margin_right = 158.0
margin_bottom = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="TextureButton" parent="Panel/VBoxContainer"]
margin_right = 316.0
margin_bottom = 139.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/HostButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -34.5
margin_right = 68.5
margin_bottom = 34.5
custom_fonts/font = SubResource( 1 )
text = "HOST"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 143.0
margin_right = 316.0
margin_bottom = 282.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/JoinButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -34.5
margin_right = 58.5
margin_bottom = 34.5
custom_fonts/font = SubResource( 2 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="Panel"]
margin_left = 312.0
margin_top = 34.0
margin_right = 422.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditName" type="LineEdit" parent="Panel"]
margin_left = 459.0
margin_top = 32.0
margin_right = 725.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAddress" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 88.0
margin_right = -58.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 5 )
text = "Address :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditAddress" type="LineEdit" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_top = 88.0
margin_right = 213.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 6 )
text = "localhost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelStatus" type="Label" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -96.0
margin_right = 47.0
margin_bottom = -62.0
custom_fonts/font = SubResource( 7 )
text = "Message"
align = 1
uppercase = true
[connection signal="pressed" from="Panel/VBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
